--- a/NLP2/Lab04/TP4.ipynb
+++ b/NLP2/Lab04/TP4.ipynb
@@ -4317,6 +4317,120 @@
    "source": [
     "### (3 points) Altogether, write down an annotation guildeline (which should be at least 2/3 of a page long)."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Annotation Guideline: Identifying Hate Speech in Tweets\n",
+    "\n",
+    "1. **Definition of Hate Speech:**  \n",
+    "   Hate speech refers to any content that promotes or expresses violence, discrimination, prejudice, or hostility towards individuals or groups based on attributes such as race, ethnicity, religion, gender, sexual orientation, nationality, or any other protected characteristic. It may include explicit or implicit derogatory language, threats, harassment, or incitement to harm or discriminate against others.\n",
+    "\n",
+    "2. **Annotation Task:**  \n",
+    "   The task is to determine whether a given tweet contains hate speech, is not hate speech, or is not annotable (can't tell). Focus on the text of the tweet and do not consider the intentions or background of the author.\n",
+    "\n",
+    "3. **Target Classes:**\n",
+    "   - **Hate:** Tweets that clearly contain hate speech as per the definition provided.\n",
+    "   - **Not Hate:** Tweets that do not contain hate speech or any indicators of violence, discrimination, prejudice, or hostility.\n",
+    "   - **Can't Tell / Not Annotable:** Tweets that are ambiguous, lack sufficient context, or are incomprehensible, making it impossible to confidently assign a hate or not hate label. Document these tweets for analysis purposes.\n",
+    "  \n",
+    "  \n",
+    "4. **Indicators of Hate Speech:**  \n",
+    "   Consider the following indicators while annotating tweets as hate or not hate:\n",
+    "\n",
+    "   - **Derogatory Language:** Look for derogatory or offensive terms, slurs, or degrading language targeting individuals or groups based on protected attributes.\n",
+    "   - **Threats and Incitement:** Identify direct or indirect threats, calls for violence, or incitement to harm or discriminate against others.\n",
+    "   - **Discrimination and Prejudice:** Observe expressions of prejudice, stereotypes, or discriminatory views towards a specific group.\n",
+    "   - **Intolerance and Hostility:** Note any expressions of intolerance, animosity, or hostility towards individuals or groups based on protected attributes.\n",
+    "   - **Harassment:** Look for tweets that involve repetitive, persistent, or unwanted behavior intended to distress, intimidate, or belittle others.\n",
+    "\n",
+    "5. **Contextual Understanding:**  \n",
+    "   Consider the overall context of the tweet to make an informed decision. Take into account the language used, the tone, any sarcasm or irony, and the potential impact on the targeted individual or group.\n",
+    "\n",
+    "6. **Ambiguous Cases and Examples:**  \n",
+    "   Some tweets may present challenges in determining hate speech. Examples of ambiguous cases include:\n",
+    "   \n",
+    "   - Tweets that use sarcasm or irony, making it unclear whether they are promoting hate or not.\n",
+    "   - Tweets that require additional context or background information to understand their intent.\n",
+    "   - Tweets that involve complex language, cultural references, or slang that may be open to interpretation.\n",
+    "\n",
+    "   When encountering such cases, follow these guidelines:\n",
+    "   \n",
+    "   - If the tweet's intent is unclear or the hate speech is not evident, label it as 'Can't Tell / Not Annotable.'\n",
+    "   - Document ambiguous cases with brief explanations for analysis and possible future improvements.\n",
+    "\n",
+    "7. **False Positives:**  \n",
+    "   While it is crucial to identify hate speech accurately, false positives (labeling a non-hate tweet as hate) should be minimized. Pay attention to the specific context, cultural references, and potential misinterpretations to avoid mislabeling tweets.\n",
+    "\n",
+    "8. **Multiple Labels:**  \n",
+    "   Assign one of the three labels per tweet: 'Hate,' 'Not Hate,' or 'Can't Tell / Not Annotable.' Avoid assigning multiple labels to a single tweet.\n",
+    "\n",
+    "9. **Neutrality:**  \n",
+    "   Maintain a neutral and objective approach during the annotation process. Do not let personal opinions or biases influence the labeling decision.\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (1 point) Every person in your group is going to annotate these tweets separately. So if you are 3, annotate them 3 times."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "### link to a google sheet with the 100 tweets that contain at least 20% of hate score"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "### TODO"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# link to a google sheet with the 100 tweets that contain at least 20% of hate score\n",
+    "display(Markdown(\"### link to a google sheet with the 100 tweets that contain at least 20% of hate score\"))\n",
+    "display(Markdown(\"### TODO\"))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (2 point) Evaluate your inter-annotaor agreement using Fleiss Kappa."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TODO"
+   ]
   }
  ],
  "metadata": {
