--- a/NLP2/Lab04/TP4.ipynb
+++ b/NLP2/Lab04/TP4.ipynb
@@ -4210,16 +4210,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2970/2970 [00:04<00:00, 689.94it/s]\n"
-     ]
-    },
     {
      "data": {
       "text/markdown": [
@@ -4298,16 +4291,27 @@
     "hate_tweets = []\n",
     "hate_tweets_scores = []\n",
     "hate_tweets_idx = []\n",
-    "for i in tqdm.tqdm(range(len(predictions))):\n",
+    "nb = 0\n",
+    "for i in range(len(predictions)):\n",
     "    if scores_list[i][1] > 0.2:\n",
     "        hate_tweets.append(test[\"text\"][i])\n",
     "        hate_tweets_scores.append(scores_list[i][1])\n",
     "        hate_tweets_idx.append(i)\n",
+    "        nb += 1\n",
+    "    if nb == 100:\n",
+    "        break\n",
     "\n",
     "# print 100 tweets that contain at least 20% of hate score\n",
     "display(Markdown(\"### 5 of the 100 tweets that contain at least 20% of hate score\"))\n",
     "for i in range(5):\n",
-    "    display(Markdown(hate_tweets[i]))"
+    "    display(Markdown(hate_tweets[i]))\n",
+    "\n",
+    "# export the 100 tweets that contain at least 20% of hate score in a csv file\n",
+    "with open('hate_tweets.csv', 'w', newline='') as file:\n",
+    "    writer = csv.writer(file)\n",
+    "    writer.writerow([\"text\"])\n",
+    "    for i in range(len(hate_tweets)):\n",
+    "        writer.writerow([hate_tweets[i]])"
    ]
   },
   {
@@ -4331,10 +4335,12 @@
     "2. **Annotation Task:**  \n",
     "   The task is to determine whether a given tweet contains hate speech, is not hate speech, or is not annotable (can't tell). Focus on the text of the tweet and do not consider the intentions or background of the author.\n",
     "\n",
+    "   Labels used are `hate`, `not hate` or `undefined`\n",
+    "\n",
     "3. **Target Classes:**\n",
-    "   - **Hate:** Tweets that clearly contain hate speech as per the definition provided.\n",
-    "   - **Not Hate:** Tweets that do not contain hate speech or any indicators of violence, discrimination, prejudice, or hostility.\n",
-    "   - **Can't Tell / Not Annotable:** Tweets that are ambiguous, lack sufficient context, or are incomprehensible, making it impossible to confidently assign a hate or not hate label. Document these tweets for analysis purposes.\n",
+    "   - **Hate:** (`hate`) Tweets that clearly contain hate speech as per the definition provided.\n",
+    "   - **Not Hate:** (`not hate`) Tweets that do not contain hate speech or any indicators of violence, discrimination, prejudice, or hostility.\n",
+    "   - **Can't Tell / Not Annotable:** (`undefined`) Tweets that are ambiguous, lack sufficient context, or are incomprehensible, making it impossible to confidently assign a hate or not hate label. Document these tweets for analysis purposes.\n",
     "  \n",
     "  \n",
     "4. **Indicators of Hate Speech:**  \n",
@@ -4358,14 +4364,14 @@
     "\n",
     "   When encountering such cases, follow these guidelines:\n",
     "   \n",
-    "   - If the tweet's intent is unclear or the hate speech is not evident, label it as 'Can't Tell / Not Annotable.'\n",
+    "   - If the tweet's intent is unclear or the hate speech is not evident, label it as `undefined`\n",
     "   - Document ambiguous cases with brief explanations for analysis and possible future improvements.\n",
     "\n",
     "7. **False Positives:**  \n",
     "   While it is crucial to identify hate speech accurately, false positives (labeling a non-hate tweet as hate) should be minimized. Pay attention to the specific context, cultural references, and potential misinterpretations to avoid mislabeling tweets.\n",
     "\n",
     "8. **Multiple Labels:**  \n",
-    "   Assign one of the three labels per tweet: 'Hate,' 'Not Hate,' or 'Can't Tell / Not Annotable.' Avoid assigning multiple labels to a single tweet.\n",
+    "   Assign one of the three labels per tweet: `hate`, `not hate`, or `undefined` Avoid assigning multiple labels to a single tweet.\n",
     "\n",
     "9. **Neutrality:**  \n",
     "   Maintain a neutral and objective approach during the annotation process. Do not let personal opinions or biases influence the labeling decision.\n",
@@ -4382,7 +4388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
