link to google sheet

--- a/NLP2/Lab04/TP4.ipynb
+++ b/NLP2/Lab04/TP4.ipynb
@@ -4388,7 +4388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -4406,7 +4406,7 @@
     {
      "data": {
       "text/markdown": [
-       "### TODO"
+       "### https://docs.google.com/spreadsheets/d/1OJeoByMNYQ16JyTh8YhtwFlH5pVYldV1-MdsfLuH_G8/edit?usp=sharing"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -4419,7 +4419,7 @@
    "source": [
     "# link to a google sheet with the 100 tweets that contain at least 20% of hate score\n",
     "display(Markdown(\"### link to a google sheet with the 100 tweets that contain at least 20% of hate score\"))\n",
-    "display(Markdown(\"### TODO\"))"
+    "display(Markdown(\"### https://docs.google.com/spreadsheets/d/1OJeoByMNYQ16JyTh8YhtwFlH5pVYldV1-MdsfLuH_G8/edit?usp=sharing\"))"
    ]
   },
   {
