--- a/NLP2/Lab04/TP4.ipynb
+++ b/NLP2/Lab04/TP4.ipynb
@@ -4188,7 +4188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using a pre-trained transformer model, such as BERT, offers several advantages over a naive Bayes classifier. These include the ability to learn complex patterns, transfer learning capabilities, superior language understanding, handling long-range dependencies, and continuous learning.  \n",
+    "Using a pre-trained transformer model, such as BERT, offers several advantages over a naive Bayes classifier. These include the ability to learn complex patterns, transfer learning capabilities, superior language understanding and handling long-range dependencies.  \n",
     "However, transformers like BERT are computationally expensive and less interpretable compared to naive Bayes classifiers."
    ]
   },
@@ -4359,13 +4359,16 @@
     "   Some tweets may present challenges in determining hate speech. Examples of ambiguous cases include:\n",
     "   \n",
     "   - Tweets that use sarcasm or irony, making it unclear whether they are promoting hate or not.\n",
-    "   - Tweets that require additional context or background information to understand their intent.\n",
-    "   - Tweets that involve complex language, cultural references, or slang that may be open to interpretation.\n",
+    "   example : \"@user @user you son of a bitch i'm in\" -> here they are surely joking between friends and not insulting each other\n",
     "\n",
-    "   When encountering such cases, follow these guidelines:\n",
-    "   \n",
-    "   - If the tweet's intent is unclear or the hate speech is not evident, label it as `undefined`\n",
-    "   - Document ambiguous cases with brief explanations for analysis and possible future improvements.\n",
+    "   - Tweets that require additional context or background information to understand their intent.\n",
+    "   example : \"@user here you should die lol\" -> may be about a video game \n",
+    "\n",
+    "   - Tweets that involve complex language, cultural references, or slang that may be open to interpretation.\n",
+    "   example : \"@user presta atención al personaje negro\" -> here negro means the color black in spanish\n",
+    "\n",
+    "   When encountering such cases, label it as `undefined`\n",
+    "\n",
     "\n",
     "7. **False Positives:**  \n",
     "   While it is crucial to identify hate speech accurately, false positives (labeling a non-hate tweet as hate) should be minimized. Pay attention to the specific context, cultural references, and potential misinterpretations to avoid mislabeling tweets.\n",
@@ -4375,7 +4378,14 @@
     "\n",
     "9. **Neutrality:**  \n",
     "   Maintain a neutral and objective approach during the annotation process. Do not let personal opinions or biases influence the labeling decision.\n",
-    "\n"
+    "\n",
+    "10. **Grasping Twitter Context:**\n",
+    "\n",
+    "   Twitter has unique context markers which are essential for tweet interpretation:\n",
+    "\n",
+    "   - **@user:** \"Mentions\" tag users in tweets, often to direct conversation. Unfortunatly with our database it is anonymous.\n",
+    "\n",
+    "   - **#keyword:** \"Hashtags\" denote topics or keywords in tweets, typically linked to broader conversations or trends. Recognizing the connotation of a hashtag may assist in determining if a tweet represents hate speech.\n"
    ]
   },
   {
@@ -4455,7 +4465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
