--- a/NLP2/Lab04/TP4.ipynb
+++ b/NLP2/Lab04/TP4.ipynb
@@ -26,18 +26,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Found cached dataset tweet_eval (/home/pili/.cache/huggingface/datasets/tweet_eval/hate/1.1.0/12aee5282b8784f3e95459466db4cdf45c6bf49719c25cdb0743d71ed0410343)\n",
-      "100%|██████████| 3/3 [00:00<00:00, 1293.07it/s]\n",
-      "Found cached dataset tweet_eval (/home/pili/.cache/huggingface/datasets/tweet_eval/offensive/1.1.0/12aee5282b8784f3e95459466db4cdf45c6bf49719c25cdb0743d71ed0410343)\n",
-      "100%|██████████| 3/3 [00:00<00:00, 1778.50it/s]\n"
+      "Found cached dataset tweet_eval (/home/pierre/.cache/huggingface/datasets/tweet_eval/hate/1.1.0/12aee5282b8784f3e95459466db4cdf45c6bf49719c25cdb0743d71ed0410343)\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "39d0e597d71043d28f0ae225289ab577",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Found cached dataset tweet_eval (/home/pierre/.cache/huggingface/datasets/tweet_eval/offensive/1.1.0/12aee5282b8784f3e95459466db4cdf45c6bf49719c25cdb0743d71ed0410343)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "428b0cd6a2394c5cb1ddb0debfdc408b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -73,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -101,132 +133,15 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading cached processed dataset at /home/pili/.cache/huggingface/datasets/tweet_eval/hate/1.1.0/12aee5282b8784f3e95459466db4cdf45c6bf49719c25cdb0743d71ed0410343/cache-f4b9014e43714767.arrow\n"
+     "ename": "NameError",
+     "evalue": "name 'train_hate' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m display(Markdown(\u001b[39m\"\u001b[39m\u001b[39m### Hate dataset\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[1;32m      5\u001b[0m display(Markdown(\u001b[39m\"\u001b[39m\u001b[39m#### Label 0\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[0;32m----> 6\u001b[0m display(train_hate\u001b[39m.\u001b[39mfilter(\u001b[39mlambda\u001b[39;00m example: example[\u001b[39m\"\u001b[39m\u001b[39mlabel\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m)\u001b[39m.\u001b[39mselect(\u001b[39mrange\u001b[39m(\u001b[39m5\u001b[39m))[\u001b[39m\"\u001b[39m\u001b[39mtext\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[1;32m      7\u001b[0m display(Markdown(\u001b[39m\"\u001b[39m\u001b[39m#### Label 1\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[1;32m      8\u001b[0m display(train_hate\u001b[39m.\u001b[39mfilter(\u001b[39mlambda\u001b[39;00m example: example[\u001b[39m\"\u001b[39m\u001b[39mlabel\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m)\u001b[39m.\u001b[39mselect(\u001b[39mrange\u001b[39m(\u001b[39m5\u001b[39m))[\u001b[39m\"\u001b[39m\u001b[39mtext\u001b[39m\u001b[39m\"\u001b[39m])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'train_hate' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['@user nice new signage. Are you not concerned by Beatlemania -style hysterical crowds crongregating on you…',\n",
-       " 'Hysterical woman like @user',\n",
-       " 'Me flirting- So tell me about your father...',\n",
-       " 'The Philippine Catholic bishops\\' work for migrant workers should focus on families who are \"paying the great...',\n",
-       " 'When cuffin season is finally over']"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "#### Label 1"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading cached processed dataset at /home/pili/.cache/huggingface/datasets/tweet_eval/hate/1.1.0/12aee5282b8784f3e95459466db4cdf45c6bf49719c25cdb0743d71ed0410343/cache-6f737a7e1391ce3b.arrow\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['A woman who you fucked multiple times saying yo dick small is a compliment you know u hit that spot 😎',\n",
-       " '@user @user real talk do you have eyes or were they gouged out by a rapefugee?',\n",
-       " 'your girlfriend lookin at me like a groupie in this bitch!',\n",
-       " \"I AM NOT GOING AFTER YOUR EX BF YOU LIEING SACK OF SHIT ! I'm done with you dude that's why I dumped your ass cause your a lieing 😂😡 bitch\",\n",
-       " 'Send home migrants not in need of protection, Peter Dutton tells UN, HEY DUTTON HOW ABOUT THE ONES THAT HAVE STAYED AND NOT LEFT THE COUNTRY WHEN THEY SHOULD OVERSTAYERS ? WHY DONT YOU GO AND ROUND ALL THEM UP ?']"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "### Offensive dataset"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "#### Label 0"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading cached processed dataset at /home/pili/.cache/huggingface/datasets/tweet_eval/offensive/1.1.0/12aee5282b8784f3e95459466db4cdf45c6bf49719c25cdb0743d71ed0410343/cache-eb9ecfc3e8c05dd5.arrow\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['@user Bono... who cares. Soon people will understand that they gain nothing from following a phony celebrity. Become a Leader of your people instead or help and support your fellow countrymen.',\n",
-       " '@user Get him some line help. He is gonna be just fine. As the game went on you could see him progressing more with his reads. He brought what has been missing. The deep ball presence. Now he just needs a little more time',\n",
-       " '@user @user She is great. Hi Fiona!',\n",
-       " '@user @user @user @user @user @user @user @user @user @user @user @user @user @user @user This is the VetsResistSquadron\"\" is Bullshit.. They are girl scout veterans, I have never met any other veterans or served with anyone that was a gun control advocate? Have you?\"\"',\n",
-       " '@user @user Lol. Except he’s the most successful president in our lifetimes. He’s undone most of the damage Obummer did and set America on the right path again. #MAGA']"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "#### Label 1"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading cached processed dataset at /home/pili/.cache/huggingface/datasets/tweet_eval/offensive/1.1.0/12aee5282b8784f3e95459466db4cdf45c6bf49719c25cdb0743d71ed0410343/cache-444e3b49659f88c2.arrow\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['@user Eight years the republicans denied obama’s picks. Breitbarters outrage is as phony as their fake president.',\n",
-       " \"@user She has become a parody unto herself? She has certainly taken some heat for being such an....well idiot. Could be optic too  Who know with Liberals  They're all optics.  No substance\",\n",
-       " '@user Your looking more like a plant #maga #walkaway',\n",
-       " '@user Antifa would burn a Conservatives house down and CNN would be there lighting the torches &amp; throwing gas on the flames.',\n",
-       " '@user They cite Jones being banned for violating Twitter\\'s ToS. There are blue checkmarks spewing the same, if not worse, kind of shit. If you are going to play the anyone can get banned\"\" card. Shouldn\\'t these people also receive bans and suspensions? #VerifiedHate\"\"']"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -3614,7 +3529,8 @@
    "metadata": {},
    "source": [
     "The model has problem samll tweets using specific hastags, mainly with the ones talking of subject such as the immigration and the wall of donald Trump.  \n",
-    "It also has a lot of problem with tweets with a lot of @user (meaning it's a conversation with a lot of people) maybe the algo would be better with more context"
+    "It also has a lot of problem with tweets with a lot of @user (meaning it's a conversation with a lot of people) maybe the algo would be better with more context.  \n",
+    "As an human myself i can't really say a lot about theses tweets too."
    ]
   },
   {
@@ -4330,20 +4246,51 @@
     "## Annotation Guideline: Identifying Hate Speech in Tweets\n",
     "\n",
     "1. **Definition of Hate Speech:**  \n",
-    "   Hate speech refers to any content that promotes or expresses violence, discrimination, prejudice, or hostility towards individuals or groups based on attributes such as race, ethnicity, religion, gender, sexual orientation, nationality, or any other protected characteristic. It may include explicit or implicit derogatory language, threats, harassment, or incitement to harm or discriminate against others.\n",
+    "   Following the definition of the united nations [here](https://www.un.org/en/hate-speech/understanding-hate-speech/what-is-hate-speech#:~:text=In%20common%20language%2C%20%E2%80%9Chate%20speech,that%20may%20threaten%20social%20peace.),  \n",
+    "   In common language, “hate speech” refers to offensive discourse targeting a group or an individual based on inherent characteristics (such as race, religion or gender) and that may threaten social peace.\n",
+    "\n",
+    "   \n",
+    "   Hate speech can be conveyed through any form of expression, including images, cartoons, memes, objects, gestures and symbols and it can be disseminated offline or online.\n",
+    "\n",
+    "   Hate speech is “discriminatory” (biased, bigoted or intolerant) or “pejorative” (prejudiced, contemptuous or demeaning) of an individual or group.\n",
+    "   Hate speech calls out real or perceived “identity factors” of an individual or a group, including: “religion, ethnicity, nationality, race, colour, descent, gender,” but also characteristics such as language, economic or social origin, disability, health status, or sexual orientation, among many others.\n",
     "\n",
     "2. **Annotation Task:**  \n",
-    "   The task is to determine whether a given tweet contains hate speech, is not hate speech, or is not annotable (can't tell). Focus on the text of the tweet and do not consider the intentions or background of the author.\n",
+    "   The task is to determine whether a given tweet contains hate speech, is not hate speech, or is not annotable (can't tell).\n",
     "\n",
     "   Labels used are `hate`, `not hate` or `undefined`\n",
     "\n",
-    "3. **Target Classes:**\n",
-    "   - **Hate:** (`hate`) Tweets that clearly contain hate speech as per the definition provided.\n",
-    "   - **Not Hate:** (`not hate`) Tweets that do not contain hate speech or any indicators of violence, discrimination, prejudice, or hostility.\n",
-    "   - **Can't Tell / Not Annotable:** (`undefined`) Tweets that are ambiguous, lack sufficient context, or are incomprehensible, making it impossible to confidently assign a hate or not hate label. Document these tweets for analysis purposes.\n",
+    "   **Hate:** (`hate`) Tweets that clearly contain hate speech as per the definition provided.  \n",
+    "   examples : \n",
+    "      + 'your girlfriend lookin at me like a groupie in this bitch!',\n",
+    "      + \"I AM NOT GOING AFTER YOUR EX BF YOU LIEING SACK OF SHIT ! I'm done with you dude that's why I dumped your ass cause your a lieing 😂😡 bitch\",\n",
+    "      + 'Send home migrants not in need of protection, Peter Dutton tells UN, HEY DUTTON HOW ABOUT THE ONES THAT HAVE STAYED AND NOT LEFT THE COUNTRY WHEN THEY SHOULD OVERSTAYERS ? WHY DONT YOU GO AND ROUND ALL THEM UP ?'\n",
+    "\n",
+    "   **Not Hate:** (`not hate`) Tweets that do not contain hate speech or any indicators of violence, discrimination, prejudice, or hostility.  \n",
+    "   examples : \n",
+    "      + 'When cuffin season is finally over'\n",
+    "      + 'More migrants take sea route to #Spain than Italy this year: UN'\n",
+    "   \n",
+    "   **Can't Tell / Not Annotable:** (`undefined`) Tweets that are ambiguous, lack sufficient context, or are incomprehensible, making it impossible to confidently assign a hate or not hate label. Document these tweets for analysis purposes.  \n",
+    "   examples :\n",
+    "      - Tweets that use sarcasm or irony, making it unclear whether they are promoting hate or not.\n",
+    "      example : \"@user @user you son of a bitch i'm in\"  \n",
+    "      -> here they are surely joking between friends and not insulting each other\n",
+    "\n",
+    "      - Tweets that require additional context or background information to understand their intent.\n",
+    "      example : \"@user here you should die #lol\"  \n",
+    "      -> may be about a video game \n",
+    "\n",
+    "      - Tweets that involve complex language, cultural references, or slang that may be open to interpretation.\n",
+    "      example : \"@user presta atención al personaje negro\"  \n",
+    "      -> here negro means the color black in spanish\n",
+    "\n",
+    "   Be carefull : Avoid assigning multiple labels to a single tweet.\n",
+    "\n",
+    "   For a lot more example take a look at the dataset [here](https://huggingface.co/datasets/tweet_eval/viewer/hate/train)\n",
     "  \n",
     "  \n",
-    "4. **Indicators of Hate Speech:**  \n",
+    "3. **Indicators of Hate Speech:**  \n",
     "   Consider the following indicators while annotating tweets as hate or not hate:\n",
     "\n",
     "   - **Derogatory Language:** Look for derogatory or offensive terms, slurs, or degrading language targeting individuals or groups based on protected attributes.\n",
@@ -4352,34 +4299,17 @@
     "   - **Intolerance and Hostility:** Note any expressions of intolerance, animosity, or hostility towards individuals or groups based on protected attributes.\n",
     "   - **Harassment:** Look for tweets that involve repetitive, persistent, or unwanted behavior intended to distress, intimidate, or belittle others.\n",
     "\n",
-    "5. **Contextual Understanding:**  \n",
+    "   These indicators are not exhaustive. Consider other factors that may indicate hate speech.\n",
+    "\n",
+    "4. **Contextual Understanding and Neutrality:**  \n",
     "   Consider the overall context of the tweet to make an informed decision. Take into account the language used, the tone, any sarcasm or irony, and the potential impact on the targeted individual or group.\n",
     "\n",
-    "6. **Ambiguous Cases and Examples:**  \n",
-    "   Some tweets may present challenges in determining hate speech. Examples of ambiguous cases include:\n",
-    "   \n",
-    "   - Tweets that use sarcasm or irony, making it unclear whether they are promoting hate or not.\n",
-    "   example : \"@user @user you son of a bitch i'm in\" -> here they are surely joking between friends and not insulting each other\n",
-    "\n",
-    "   - Tweets that require additional context or background information to understand their intent.\n",
-    "   example : \"@user here you should die lol\" -> may be about a video game \n",
-    "\n",
-    "   - Tweets that involve complex language, cultural references, or slang that may be open to interpretation.\n",
-    "   example : \"@user presta atención al personaje negro\" -> here negro means the color black in spanish\n",
-    "\n",
-    "   When encountering such cases, label it as `undefined`\n",
-    "\n",
-    "\n",
-    "7. **False Positives:**  \n",
     "   While it is crucial to identify hate speech accurately, false positives (labeling a non-hate tweet as hate) should be minimized. Pay attention to the specific context, cultural references, and potential misinterpretations to avoid mislabeling tweets.\n",
     "\n",
-    "8. **Multiple Labels:**  \n",
-    "   Assign one of the three labels per tweet: `hate`, `not hate`, or `undefined` Avoid assigning multiple labels to a single tweet.\n",
-    "\n",
-    "9. **Neutrality:**  \n",
     "   Maintain a neutral and objective approach during the annotation process. Do not let personal opinions or biases influence the labeling decision.\n",
     "\n",
-    "10. **Grasping Twitter Context:**\n",
+    "\n",
+    "5. **Grasping Twitter Context:**\n",
     "\n",
     "   Twitter has unique context markers which are essential for tweet interpretation:\n",
     "\n",
@@ -4398,7 +4328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -4416,7 +4346,7 @@
     {
      "data": {
       "text/markdown": [
-       "### https://docs.google.com/spreadsheets/d/1OJeoByMNYQ16JyTh8YhtwFlH5pVYldV1-MdsfLuH_G8/edit?usp=sharing"
+       "### [docs](https://docs.google.com/spreadsheets/d/1OJeoByMNYQ16JyTh8YhtwFlH5pVYldV1-MdsfLuH_G8/edit?usp=sharing)"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -4429,7 +4359,7 @@
    "source": [
     "# link to a google sheet with the 100 tweets that contain at least 20% of hate score\n",
     "display(Markdown(\"### link to a google sheet with the 100 tweets that contain at least 20% of hate score\"))\n",
-    "display(Markdown(\"### https://docs.google.com/spreadsheets/d/1OJeoByMNYQ16JyTh8YhtwFlH5pVYldV1-MdsfLuH_G8/edit?usp=sharing\"))"
+    "display(Markdown(\"### [docs](https://docs.google.com/spreadsheets/d/1OJeoByMNYQ16JyTh8YhtwFlH5pVYldV1-MdsfLuH_G8/edit?usp=sharing)\"))"
    ]
   },
   {
