--- a/NLP2/Lab04/TP4.ipynb
+++ b/NLP2/Lab04/TP4.ipynb
@@ -26,20 +26,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Found cached dataset tweet_eval (/home/pierre/.cache/huggingface/datasets/tweet_eval/hate/1.1.0/12aee5282b8784f3e95459466db4cdf45c6bf49719c25cdb0743d71ed0410343)\n"
+      "Found cached dataset tweet_eval (/home/coartix/.cache/huggingface/datasets/tweet_eval/hate/1.1.0/12aee5282b8784f3e95459466db4cdf45c6bf49719c25cdb0743d71ed0410343)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39d0e597d71043d28f0ae225289ab577",
+       "model_id": "aabc18d2ad6e4acba6e021b83f0fb8b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -54,13 +54,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Found cached dataset tweet_eval (/home/pierre/.cache/huggingface/datasets/tweet_eval/offensive/1.1.0/12aee5282b8784f3e95459466db4cdf45c6bf49719c25cdb0743d71ed0410343)\n"
+      "Found cached dataset tweet_eval (/home/coartix/.cache/huggingface/datasets/tweet_eval/offensive/1.1.0/12aee5282b8784f3e95459466db4cdf45c6bf49719c25cdb0743d71ed0410343)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "428b0cd6a2394c5cb1ddb0debfdc408b",
+       "model_id": "f7cee7dc923747ae96e7fa1e8aa1b9c6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -133,15 +133,139 @@
      "output_type": "display_data"
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'train_hate' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m display(Markdown(\u001b[39m\"\u001b[39m\u001b[39m### Hate dataset\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[1;32m      5\u001b[0m display(Markdown(\u001b[39m\"\u001b[39m\u001b[39m#### Label 0\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[0;32m----> 6\u001b[0m display(train_hate\u001b[39m.\u001b[39mfilter(\u001b[39mlambda\u001b[39;00m example: example[\u001b[39m\"\u001b[39m\u001b[39mlabel\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m)\u001b[39m.\u001b[39mselect(\u001b[39mrange\u001b[39m(\u001b[39m5\u001b[39m))[\u001b[39m\"\u001b[39m\u001b[39mtext\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[1;32m      7\u001b[0m display(Markdown(\u001b[39m\"\u001b[39m\u001b[39m#### Label 1\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[1;32m      8\u001b[0m display(train_hate\u001b[39m.\u001b[39mfilter(\u001b[39mlambda\u001b[39;00m example: example[\u001b[39m\"\u001b[39m\u001b[39mlabel\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m)\u001b[39m.\u001b[39mselect(\u001b[39mrange\u001b[39m(\u001b[39m5\u001b[39m))[\u001b[39m\"\u001b[39m\u001b[39mtext\u001b[39m\u001b[39m\"\u001b[39m])\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'train_hate' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading cached processed dataset at /home/coartix/.cache/huggingface/datasets/tweet_eval/hate/1.1.0/12aee5282b8784f3e95459466db4cdf45c6bf49719c25cdb0743d71ed0410343/cache-429b6e07cf4f830b.arrow\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['@user nice new signage. Are you not concerned by Beatlemania -style hysterical crowds crongregating on you…',\n",
+       " 'Hysterical woman like @user',\n",
+       " 'Me flirting- So tell me about your father...',\n",
+       " 'The Philippine Catholic bishops\\' work for migrant workers should focus on families who are \"paying the great...',\n",
+       " 'When cuffin season is finally over']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "#### Label 1"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading cached processed dataset at /home/coartix/.cache/huggingface/datasets/tweet_eval/hate/1.1.0/12aee5282b8784f3e95459466db4cdf45c6bf49719c25cdb0743d71ed0410343/cache-279708674ccb8ecd.arrow\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['A woman who you fucked multiple times saying yo dick small is a compliment you know u hit that spot 😎',\n",
+       " '@user @user real talk do you have eyes or were they gouged out by a rapefugee?',\n",
+       " 'your girlfriend lookin at me like a groupie in this bitch!',\n",
+       " \"I AM NOT GOING AFTER YOUR EX BF YOU LIEING SACK OF SHIT ! I'm done with you dude that's why I dumped your ass cause your a lieing 😂😡 bitch\",\n",
+       " 'Send home migrants not in need of protection, Peter Dutton tells UN, HEY DUTTON HOW ABOUT THE ONES THAT HAVE STAYED AND NOT LEFT THE COUNTRY WHEN THEY SHOULD OVERSTAYERS ? WHY DONT YOU GO AND ROUND ALL THEM UP ?']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "### Offensive dataset"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "#### Label 0"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fcdda5b0521742f698021347ed29fa69",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Filter:   0%|          | 0/11916 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['@user Bono... who cares. Soon people will understand that they gain nothing from following a phony celebrity. Become a Leader of your people instead or help and support your fellow countrymen.',\n",
+       " '@user Get him some line help. He is gonna be just fine. As the game went on you could see him progressing more with his reads. He brought what has been missing. The deep ball presence. Now he just needs a little more time',\n",
+       " '@user @user She is great. Hi Fiona!',\n",
+       " '@user @user @user @user @user @user @user @user @user @user @user @user @user @user @user This is the VetsResistSquadron\"\" is Bullshit.. They are girl scout veterans, I have never met any other veterans or served with anyone that was a gun control advocate? Have you?\"\"',\n",
+       " '@user @user Lol. Except he’s the most successful president in our lifetimes. He’s undone most of the damage Obummer did and set America on the right path again. #MAGA']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "#### Label 1"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading cached processed dataset at /home/coartix/.cache/huggingface/datasets/tweet_eval/offensive/1.1.0/12aee5282b8784f3e95459466db4cdf45c6bf49719c25cdb0743d71ed0410343/cache-ad72cdd5a8672614.arrow\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['@user Eight years the republicans denied obama’s picks. Breitbarters outrage is as phony as their fake president.',\n",
+       " \"@user She has become a parody unto herself? She has certainly taken some heat for being such an....well idiot. Could be optic too  Who know with Liberals  They're all optics.  No substance\",\n",
+       " '@user Your looking more like a plant #maga #walkaway',\n",
+       " '@user Antifa would burn a Conservatives house down and CNN would be there lighting the torches &amp; throwing gas on the flames.',\n",
+       " '@user They cite Jones being banned for violating Twitter\\'s ToS. There are blue checkmarks spewing the same, if not worse, kind of shit. If you are going to play the anyone can get banned\"\" card. Shouldn\\'t these people also receive bans and suspensions? #VerifiedHate\"\"']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -2831,7 +2955,7 @@
     "a recall of 0.9481\n",
     "and a F1 score of 0.6538  \n",
     "\n",
-    "the model has a high recall meaning its good at finding hatefull content although it's precision is a bit less good"
+    "The model has a high recall meaning its good at finding hatefull content although it's precision is not too good."
    ]
   },
   {
@@ -3528,8 +3652,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The model has problem samll tweets using specific hastags, mainly with the ones talking of subject such as the immigration and the wall of donald Trump.  \n",
-    "It also has a lot of problem with tweets with a lot of @user (meaning it's a conversation with a lot of people) maybe the algo would be better with more context.  \n",
+    "The model has problem on small tweets using specific hashtags, mainly with the ones talking of subject such as the immigration and the wall of donald Trump.  \n",
+    "It also has a lot of problem with tweets containing a lot of @user (meaning it's a conversation with a lot of people) maybe the algorithm would be better with more context.  \n",
     "As an human myself i can't really say a lot about theses tweets too."
    ]
   },
@@ -4113,7 +4237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Annontate Data"
+    "## Annotate Data"
    ]
   },
   {
@@ -4395,7 +4519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
